--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,10 +11,15 @@ theme:
     - search.highlight
     - search.suggest
     - content.code.copy
+  logo: assets/logo.svg
+  favicon: assets/logo.svg
   palette:
     - scheme: default
       primary: indigo
       accent: indigo
+plugins:
+  - search
+  - include-markdown
 nav:
   - Overview: index.md
   - Getting Started: getting-started.md
