--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,12 +2,12 @@ name: docs
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'mkdocs.yml'
-      - 'docs/**'
-      - 'queryhound/**'
-      - '.github/workflows/docs.yml'
+      - "mkdocs.yml"
+      - "docs/**"
+      - "queryhound/**"
+      - ".github/workflows/docs.yml"
   workflow_dispatch: {}
 
 permissions:
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install MkDocs and theme
         run: |
           python -m pip install --upgrade pip
@@ -41,6 +41,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Configure Pages
+        uses: actions/configure-pages@v4
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
