ci: enforce PR-based workflow with branch protection
- Update mkdocs-deploy.yml to validate docs on PRs, deploy only on main push
- Add PR template with comprehensive checklist
- Document branching strategy in CONTRIBUTING.md
- Add branch protection setup guide
- Ensure all workflows trigger appropriately on PRs

--- a/.github/workflows/gh-pages-publish.yml
+++ b/.github/workflows/gh-pages-publish.yml
@@ -2,7 +2,7 @@ name: Publish GitHub Pages
 
 on:
   push:
-    branches: [ gh-pages ]
+    branches: [gh-pages]
   workflow_dispatch:
 
 permissions:
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: "."
 
       - name: Deploy to GitHub Pages
         id: deployment
